# posidonius

./: .coveragerc  .gitignore  Cargo.toml  Makefile.py  README.md  code_fortran.f90  dev-requirements.txt  git_infos.f90  kepler_equation.f90  mercury  mercury.f90  mercury_constant.f90  mercury_globals.f90  orbital_elements.f90  pyproject.toml  pytest.ini  requirements.txt  setup.py  tides_constant_GR.f90  user_module.f90  utilities.f90
benches/: common  simulation.rs
cases/: case3.py  case4.py  case6.py  case6_prime1.py  case6_prime2.py  case6_prime2_frequently_saved.py  case6_prime3.py  case7.py  example.py  example_binary_system.py  example_circumbinary_planet.py  example_disk.py  example_type_two_migration.py  thesis5.27.py  thesis5.28a.py  thesis5.28b.py  thesis5.28c.py  thesis5.28d.py  thesis5.30a.py  thesis5.30b.py  thesis5.30c.py  trappist1.py
cases/Bolmont_PhD_Thesis_2013/: thesis5.27.py  thesis5.28a.py  thesis5.28b.py  thesis5.28c.py  thesis5.28d.py  thesis5.28d_alleffects.py  thesis5.30a.py  thesis5.30b.py  thesis5.30c.py  thesis5.30c_alleffects.py
cases/Bolmont_et_al_2015/: case1.py  case1_prime.py  case3.py  case3_prime.py  case4.py  case6.py  case6_prime1.py  case6_prime2.py  case6_prime2_frequently_saved.py  case6_prime3.py  case7.py
cases/Gomes_et_al_2021/: K2-265b.py
cases/Revol_et_al_2024/: trappist_substellar.py
fortran/: Makefile.py  algo_leapfrog.f90  mercury.f90  physical_constant.f90  spline.f90  tides_constant_GR.f90  types_numeriques.f90  user_module.f90
fortran/analysis/: process.py
posidonius/: __init__.py  axes.py  constants.py  disk_type.py  evolution_type.py  integrator.py  particle.py  tools.py  universe.py
posidonius/analysis/: __init__.py  computation.py  history.py  resonances.py
posidonius/effects/: __init__.py  disk.py  evolution.py  general_relativity.py  rotational_flattening.py  tides.py  wind.py
posidonius/integrator/: __init__.py  common.py  ias15.py  leapfrog.py  whfast.py
posidonius/particles/: __init__.py  axes.py  particle.py  universe.py
posidonius/tests/: test_base.py  test_disk.py  test_evolution.py  test_flattening.py  test_general_relativity.py  test_integrator.py  test_star_types.py  test_tides.py  test_tools.py
posidonius/tests/common/: __init__.py  planets.py  stars.py
rust/: Cargo.toml  README.md  setup.py
rust/analysis/: common.py  process.py  process_single_resonance.py  process_timed_resonances.py
rust/cases/: case3.py  example.py  thesis5.27.py
rust/generator/: README.md  case3.py  case4.py  case7.py  example.py  setup.py  thesis5.27.py  trappist1.py
rust/generator/posidonius/: __init__.py  axes.py  constants.py  evolution_type.py  integrator.py  tools.py  universe.py
rust/posidonius/: integrator.py
rust/posidonius/analysis/: history.py  resonances.py
rust/scripts/: explore_timed_resonances.py
rust/src/: constants.rs  evolver.rs  general.rs  lib.rs  main.rs  particle.rs  tools.rs
rust/src/cases/: case3.rs  example.rs  mod.rs
rust/src/integrator/: ias15.rs  leapfrog.rs  mod.rs  output.rs  whfasthelio.rs
rust/src/particles/: axes.rs  evolver.rs  mod.rs  particle.rs  universe.rs
scripts/: clean_json.py  explore_history.py  explore_single_resonance.py  explore_timed_resonances.py  raw_history.py
src/: constants.rs  lib.rs  main.rs  tools.rs
src/effects/: disk.rs  evolution.rs  general_relativity.rs  mod.rs  rotational_flattening.rs  tides.rs  wind.rs
src/effects/rotational_flattening/: common.rs  mod.rs  (+2 more)
src/integrator/: ias15.rs  leapfrog.rs  mod.rs  output.rs  whfast.rs  whfasthelio.rs
src/particles/: axes.rs  common.rs  disk.rs  evolver.rs  flattening.rs  general_relativity.rs  mod.rs  particle.rs  tides.rs  universe.rs  wind.rs
tests/: test_disk.rs  test_evolution.rs  test_flattening.rs  test_general_relativity.rs  test_integrator.rs  test_order.rs  test_star_types.rs  test_tides.rs  test_tides_creep.rs  test_tides_kaula.rs
tests/common/: mod.rs  planets.rs  stars.rs  universe.rs
(+247 files in other folders)
