[package]
name = "posidonius"
version = "0.0.1"
authors = ["Sergi Blanco-Cuaresma <marblestation@users.noreply.github.com>"]
homepage = "https://www.blancocuaresma.com/s/"
repository = "https://github.com/marblestation/posidonius/"
readme = "README.md"
license = "AGPL-3.0-or-later"
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "posidonius"
bench = false

[lib]
path = "src/lib.rs"
name = "posidonius"
bench = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true

[dependencies]
time = "0.1.*"
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
bincode = "0.9.*"
csv = "0.15.*"
clap = "2.33.*"
assert_approx_eq = "1.1.*"
libmath = "0.2.*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simulation"
harness = false

