[package]
name = "posidonius"
version = "0.0.1"
authors = ["Sergi Blanco-Cuaresma <marblestation@users.noreply.github.com>"]
homepage = "https://www.blancocuaresma.com/s/"
repository = "https://github.com/marblestation/posidonius/"
readme = "README.md"
license = "AGPL-3.0-or-later"
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "posidonius"
bench = false

[lib]
path = "src/lib.rs"
name = "posidonius"
bench = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true

[dependencies]
time = { version = "0.3.*", features = ["formatting"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_derive = "1.0.*"
bincode = "1.3.*"
csv = "1.3.*"
clap = "4.5.*"
assert_approx_eq = "1.1.*"
libmath = "0.2.*"
serde-big-array = "0.5.1"

[dev-dependencies]
criterion = "0.5.*"

[[bench]]
name = "simulation"
harness = false

